[package]
name = "mock-fungible-token"
version = "0.0.1"
authors = ["linguists", "dongcool"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.7"
